--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -2,6 +2,10 @@ h1 {
   font-size: 3rem;
 }
 
+.body {
+  padding: 3rem 0 1rem 0;
+}
+
 .landing {
   position: relative;
   background: url('../img/showcase.jpg') no-repeat;
