--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -4,7 +4,7 @@
 
 .landing {
   position: relative;
-  background: url('../img/showcase.jpg') no-repeat;
+  background: url('../img/landing.jpg') no-repeat;
   background-size: cover;
   background-position: center;
   height: 100vh;
@@ -12,7 +12,7 @@
 }
 
 .landing-inner {
-  padding-top: 250px;
+  padding-top: 350px;
   color: #ecf0f1;
 }
 
